--- a/Home.html
+++ b/Home.html
@@ -8,68 +8,167 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
     body { background: #fff; color: #222; scroll-behavior: smooth; }
-    header { position: fixed; width: 100%; top: 0; left: 0; background: #fff; display: flex; justify-content: space-between; align-items: center; padding: 15px 60px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); z-index: 1000; }
-    header h1 { font-size: 1.8rem; color: #2563eb; font-weight: 700; }
-    nav a { margin: 0 15px; color: #555; text-decoration: none; font-weight: 500; transition: 0.3s; }
+
+    header {
+      position: fixed;
+      width: 100%;
+      top: 0; left: 0;
+      background: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 40px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      z-index: 1000;
+      flex-wrap: wrap;
+    }
+
+    header h1 {
+      font-size: 1.6rem;
+      color: #2563eb;
+      font-weight: 700;
+    }
+
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    nav a {
+      color: #555;
+      text-decoration: none;
+      font-weight: 500;
+      transition: 0.3s;
+      padding: 8px 12px;
+    }
+
     nav a:hover { color: #2563eb; }
 
-    section { padding: 100px 80px; text-align: center; }
-    
+    section {
+      padding: 100px 40px;
+      text-align: center;
+    }
+
     /* Hero Section */
     #home {
       color: #fff;
-      padding: 200px 80px;
-      background: linear-gradient(rgba(40, 40, 60, 0.8), rgba(40, 40, 60, 0.8)),
+      padding: 180px 30px;
+      background: linear-gradient(rgba(40,40,60,0.8), rgba(40,40,60,0.8)),
                   url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1500&q=80');
       background-size: cover;
       background-position: center;
     }
-    #home h1 { font-size: 3.8rem; margin-bottom: 20px; font-weight: 700; }
-    #home p { font-size: 1.3rem; opacity: 0.95; }
+
+    #home h1 { font-size: clamp(2rem, 6vw, 3.8rem); margin-bottom: 20px; font-weight: 700; }
+    #home h3 { font-size: clamp(1rem, 3vw, 1.5rem); opacity: 0.95; }
 
     #about, #team, #projects, #upcoming, #contact { max-width: 1200px; margin: auto; }
-    h2 { font-size: 2.5rem; margin-bottom: 20px; color: #111; }
-    p { color: #000000; line-height: 1.7; font-size: 1.05rem; }
+
+    h2 {
+      font-size: clamp(1.8rem, 4vw, 2.5rem);
+      margin-bottom: 20px;
+      color: #111;
+    }
+
+    p { color: #000; line-height: 1.7; font-size: clamp(0.95rem, 2vw, 1.05rem); }
 
     /* Team */
-    .team-grid { 
-      display: grid; 
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
-      gap: 30px; 
-      margin-top: 40px; 
+    .team-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 25px;
+      margin-top: 40px;
     }
-    .member { 
-      background: #f9f9f9; 
-      border-radius: 16px; 
-      padding: 30px; 
-      transition: 0.3s; 
+
+    .member {
+      background: #f9f9f9;
+      border-radius: 16px;
+      padding: 25px;
       text-align: center;
+      transition: 0.3s;
     }
+
     .member:hover { box-shadow: 0 6px 18px rgba(0,0,0,0.1); transform: translateY(-4px); }
-    .member img { 
-      width: 100%; 
-      max-width: 180px; 
-      height: 220px; 
-      object-fit: cover; 
-      border-radius: 20px; 
-      margin-bottom: 15px; 
+
+    .member img {
+      width: 100%;
+      max-width: 180px;
+      height: 220px;
+      object-fit: cover;
+      border-radius: 20px;
+      margin-bottom: 15px;
     }
+
     .member h3 { font-weight: 600; margin-bottom: 5px; }
 
     /* Projects */
-    .project-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; margin-top: 40px; }
-    .card { background: #fff; border-radius: 16px; padding: 25px; text-align: left; box-shadow: 0 3px 12px rgba(0,0,0,0.05); transition: 0.3s; cursor: pointer; }
+    .project-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
+      margin-top: 40px;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 16px;
+      padding: 25px;
+      text-align: left;
+      box-shadow: 0 3px 12px rgba(0,0,0,0.05);
+      transition: 0.3s;
+      cursor: pointer;
+    }
+
     .card:hover { transform: translateY(-5px); box-shadow: 0 6px 20px rgba(0,0,0,0.1); }
+
     .card h3 { margin-bottom: 10px; color: #111; }
     .card p { margin-bottom: 15px; color: #555; }
-    .card button { background: #2563eb; border: none; color: #fff; padding: 10px 20px; border-radius: 8px; cursor: pointer; transition: 0.3s; }
+    .card button {
+      background: #2563eb;
+      border: none;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
     .card button:hover { background: #1e40af; }
 
     /* Contact */
-    #contact { background: #f3f4f6; padding: 80px 20px; margin-top: 100px; border-top: 1px solid #e5e7eb; }
-    #contact a { color: #2563eb; text-decoration: none; font-weight: 500; }
+    #contact {
+      background: #f3f4f6;
+      padding: 80px 20px;
+      margin-top: 100px;
+      border-top: 1px solid #e5e7eb;
+    }
+
+    #contact a {
+      color: #2563eb;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
     #contact a:hover { text-decoration: underline; }
+
     footer { margin-top: 20px; color: #666; font-size: 0.9rem; }
+
+    /* Responsive Adjustments */
+    @media (max-width: 768px) {
+      header { padding: 10px 20px; flex-direction: column; align-items: flex-start; }
+      nav { margin-top: 10px; justify-content: center; width: 100%; }
+      section { padding: 80px 20px; }
+      .member img { height: 200px; }
+    }
+
+    @media (max-width: 480px) {
+      header h1 { font-size: 1.4rem; }
+      nav a { font-size: 0.9rem; padding: 6px 10px; }
+      #home { padding: 140px 20px; }
+      #home h1 { font-size: 2rem; }
+      #home h3 { font-size: 1rem; }
+      .card { padding: 20px; }
+    }
   </style>
 </head>
 <body>
@@ -105,17 +204,17 @@
         <p>Lead Software Developer</p>
       </div>
       <div class="member">
-        <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?auto=format&fit=crop&w=400&q=80" alt="Riya Sharma">
+        <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?auto=format&fit=crop&w=400&q=80" alt="Rajveer Tank">
         <h3>Rajveer Tank</h3>
         <p>Hardware Designer</p>
       </div>
       <div class="member">
-        <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?auto=format&fit=crop&w=400&q=80" alt="Arjun Mehta">
+        <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?auto=format&fit=crop&w=400&q=80" alt="Vedansh Singhai">
         <h3>Vedansh Singhai</h3>
         <p>IoT Specialist</p>
       </div>
       <div class="member">
-        <img src="https://images.unsplash.com/photo-1595152772835-219674b2a8a6?auto=format&fit=crop&w=400&q=80" alt="Sana Kapoor">
+        <img src="https://images.unsplash.com/photo-1595152772835-219674b2a8a6?auto=format&fit=crop&w=400&q=80" alt="Aayushya Singh">
         <h3>Aayushya Singh</h3>
         <p>Backend Designer</p>
       </div>
@@ -132,7 +231,7 @@
       </div>
       <div class="card" onclick="window.location='Product_Air.Wand.html'">
         <h3>Air Wand</h3>
-        <p>Connect, Move, and Control any of your favourate device's mouse using Air Wand. No need to have a surface anymore to control your devices.</p>
+        <p>Connect, Move, and Control your device's mouse using Air Wand — no surface needed anymore.</p>
         <button>View Details</button>
       </div>
       <div class="card" onclick="window.location='Product_Rusty.Arm.01.html'">
@@ -144,23 +243,22 @@
   </section>
 
   <section id="upcoming">
-  <h2>Upcoming Projects</h2>
-  <p>Next-gen robotics platform and AI-driven smart city infrastructure systems launching soon.</p>
+    <h2>Upcoming Projects</h2>
+    <p>Next-gen robotics and AI-driven smart city infrastructure systems launching soon.</p>
 
-  <div class="project-grid" style="margin-top: 50px;">
-    <div class="card">
-      <h3>RUSTY Arm 02</h3>
-      <p>An upgraded 4-servo robotic arm with a functional claw, now controllable via a web interface for precise, real-time movement and automation.</p>
-      <button>Coming Soon</button>
+    <div class="project-grid" style="margin-top: 50px;">
+      <div class="card">
+        <h3>RUSTY Arm 02</h3>
+        <p>An upgraded 4-servo robotic arm with a web interface for real-time movement and automation.</p>
+        <button>Coming Soon</button>
+      </div>
+      <div class="card">
+        <h3>DUM-E</h3>
+        <p>DUM-E Spider Bot is a 4-legged web-controlled robot designed for agile movement and smart control.</p>
+        <button>Coming Soon</button>
+      </div>
     </div>
-    <div class="card">
-      <h3>DUM-E</h3>
-      <p>DUM-E Spider Bot is a 4-legged web-controlled robot designed for agile movement and remote operation, combining stability, flexibility, and smart control through an online interface.</p>
-      <button>Coming Soon</button>
-    </div>
-  </div>
-</section>
-
+  </section>
 
   <section id="contact">
     <h2>Contact Us</h2>
