--- a/Product_Air.Wand.html
+++ b/Product_Air.Wand.html
@@ -131,7 +131,7 @@
         </div>
       </div>
 
-      <a href="home.html" class="back-btn">← Back to Home</a>
+      <a href="Home.html" class="back-btn">← Back to Home</a>
     </div>
 
     <img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e?auto=format&fit=crop&w=800&q=80" alt="Air Wand Project" class="product-image" />
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
