--- a/Product_BluScreen.html
+++ b/Product_BluScreen.html
@@ -132,7 +132,7 @@
 </div>
 
 
-      <a href="home.html" class="back-btn">← Back to Home</a>
+      <a href="Home.html" class="back-btn">← Back to Home</a>
     </div>
 
     <img src="https://images.unsplash.com/photo-1581091215367-59ab6e8b74b4?auto=format&fit=crop&w=800&q=80" alt="AI Vision System Product" class="product-image" />
@@ -142,3 +142,4 @@
 
 </body>
 </html>
+
