--- a/Product_Rusty.Arm.01.html
+++ b/Product_Rusty.Arm.01.html
@@ -131,7 +131,7 @@
         </div>
       </div>
 
-      <a href="home.html" class="back-btn">← Back to Home</a>
+      <a href="Home.html" class="back-btn">← Back to Home</a>
     </div>
 
     <img src="https://images.unsplash.com/photo-1581091870622-4b8c3e3ef7f3?auto=format&fit=crop&w=800&q=80" alt="RUSTY ARM 01 Robotic Arm" class="product-image" />
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
