Fix HTML formatting and structure in Product_BluScreen

--- a/Product_BluScreen.html
+++ b/Product_BluScreen.html
@@ -115,7 +115,7 @@
       <h2>Overview</h2>
       <p>BluScreen Project is a smart LED matrix display system that connects to a website through Wi-Fi and Bluetooth Low Energy (BLE) to perform multiple interactive functions. It can show real-time time, date, weather, and temperature, as well as display custom text entered by the user. BluScreen can also start timers and remind users of tasks on command. All these features are controlled remotely from a web interface, making it a versatile IoT-based display board that blends convenience, connectivity, and creativity.</p>
 
-      <<h2>Key Features</h2>
+      <h2>Key Features</h2>
 <div class="features">
   <div class="feature">
     <h3>🌐 Dual Connectivity</h3>
@@ -142,4 +142,5 @@
 
 </body>
 </html>
+
 
