Fix HTML encoding issues in Home.html

--- a/Home.html
+++ b/Home.html
@@ -263,9 +263,10 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:info@byteslabs.tech">info@byteslabs.tech</a></p>
-    <p>GitHub: <a href="https://github.com/byteslabs" target="_blank">github.com/byteslabs</a></p>
+    <p>GitHub: <a href="https://github.com/BYTESLAB404/Meet.BYTES" target="_blank">https://github.com/BYTESLAB404/Meet.BYTES</a></p>
     <footer>© 2025 BYTES Labs. All rights reserved.</footer>
   </section>
 
 </body>
 </html>
+
