Fix HTML encoding issues in Home.html

--- a/Home.html
+++ b/Home.html
@@ -199,12 +199,12 @@
     <h2>Meet the Team</h2>
     <div class="team-grid">
       <div class="member">
-        <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=400&q=80" alt="Palaksh Bhagat">
+        <img src="images/IMG-20250921-WA0020.jpg?auto=format&fit=crop&w=400&q=80" alt="Palaksh Bhagat">
         <h3>Palaksh Bhagat</h3>
         <p>Lead Software Developer</p>
       </div>
       <div class="member">
-        <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?auto=format&fit=crop&w=400&q=80" alt="Rajveer Tank">
+        <img src="images/WhatsApp Image 2025-11-03 at 20.38.38_5a134016.jpg?auto=format&fit=crop&w=400&q=80" alt="Rajveer Tank">
         <h3>Rajveer Tank</h3>
         <p>Hardware Designer</p>
       </div>
@@ -269,4 +269,5 @@
 
 </body>
 </html>
+
 
