Fix HTML encoding issues in Home.html

--- a/Home.html
+++ b/Home.html
@@ -209,12 +209,12 @@
         <p>Hardware Designer</p>
       </div>
       <div class="member">
-        <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?auto=format&fit=crop&w=400&q=80" alt="Vedansh Singhai">
+        <img src="images/WhatsApp Image 2025-11-03 at 21.17.31_be512eb9.jpg?auto=format&fit=crop&w=400&q=80" alt="Vedansh Singhai">
         <h3>Vedansh Singhai</h3>
         <p>IoT Specialist</p>
       </div>
       <div class="member">
-        <img src="https://images.unsplash.com/photo-1595152772835-219674b2a8a6?auto=format&fit=crop&w=400&q=80" alt="Aayushya Singh">
+        <img src="images/WhatsApp Image 2025-11-03 at 21.16.41_90671ba6.jpg?auto=format&fit=crop&w=400&q=80" alt="Aayushya Singh">
         <h3>Aayushya Singh</h3>
         <p>Backend Designer</p>
       </div>
@@ -269,5 +269,6 @@
 
 </body>
 </html>
+
 
 
