Fix HTML encoding issues in Home.html

--- a/Home.html
+++ b/Home.html
@@ -204,7 +204,7 @@
         <p>Lead Software Developer</p>
       </div>
       <div class="member">
-        <img src="images/WhatsApp Image 2025-11-03 at 20.38.38_5a134016.jpg?auto=format&fit=crop&w=400&q=80" alt="Rajveer Tank">
+        <img src="images/WhatsApp Image 2025-11-03 at 21.47.58_2e3262df.jpg?auto=format&fit=crop&w=400&q=80" alt="Rajveer Tank">
         <h3>Rajveer Tank</h3>
         <p>Hardware Designer</p>
       </div>
@@ -231,12 +231,12 @@
       </div>
       <div class="card" onclick="window.location='Product_Air.Wand.html'">
         <h3>Air Wand</h3>
-        <p>Connect, Move, and Control your device's mouse using Air Wand — no surface needed anymore.</p>
+        <p>Connect, Move, and Control your device's mouse using Air Wand. No surface needed anymore.</p>
         <button>View Details</button>
       </div>
       <div class="card" onclick="window.location='Product_Rusty.Arm.01.html'">
         <h3>RUSTY ARM 01</h3>
-        <p>A distributed platform for large-scale neural network training.</p>
+        <p>Version 1 of BYTES Lab's Mechanical Arm. Uses 3 servos and 2 joysticks for control and movement. Trusty RUSTY.</p>
         <button>View Details</button>
       </div>
     </div>
@@ -262,13 +262,14 @@
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:info@byteslabs.tech">info@byteslabs.tech</a></p>
-    <p>GitHub: <a href="https://github.com/BYTESLAB404/Meet.BYTES" target="_blank">https://github.com/BYTESLAB404/Meet.BYTES</a></p>
+    <p>Email: <a href="mailto:info@yourdudep@gmail.com">info@yourdudep@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/BYTESLAB404" target="_blank">https://github.com/BYTESLAB404</a></p>
     <footer>© 2025 BYTES Labs. All rights reserved.</footer>
   </section>
 
 </body>
 </html>
+
 
 
 
