Revise Product_BluScreen.html structure and content
Updated the HTML structure and content for the BluScreen Smart Display page, including enhancements to the layout, features, and images.

--- a/Product_BluScreen.html
+++ b/Product_BluScreen.html
@@ -131,16 +131,18 @@
   </div>
 </div>
 
-
+<img src="images/BLUSCREEN.png?auto=format&fit=crop&w=800&q=80" alt="AI Vision System Product" class="product-image" />
+      
       <a href="Home.html" class="back-btn">← Back to Home</a>
     </div>
 
-    <img src="https://images.unsplash.com/photo-1581091215367-59ab6e8b74b4?auto=format&fit=crop&w=800&q=80" alt="AI Vision System Product" class="product-image" />
+    
   </section>
 
   <footer>© 2025 BYTES Labs. All rights reserved.</footer>
 
 </body>
 </html>
+
 
 
