Revise Product_BluScreen.html with new features
Updated the HTML structure and content of the BluScreen Smart Display page, including new features and a link to the interactive web control.

--- a/Product_BluScreen.html
+++ b/Product_BluScreen.html
@@ -123,7 +123,7 @@
   </div>
   <div class="feature">
     <h3>🖥️ Interactive Web Control</h3>
-    <p>Allows users to manage and update the display in real time through an intuitive website interface.</p>
+    <p>Allows users to manage and update the display in real time through an intuitive website interface. URL: https://palakshhub.github.io/BluScreen/connect.html</p>
   </div>
   <div class="feature">
     <h3>✨ Multi-Mode Display</h3>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
